--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -33,7 +33,8 @@
         <!-- Username -->
         <div class="mb-3">
           <label class="form-label">Username</label>
-          <input type="text" name="username" class="form-control rounded-3" id="login_username" value="{{ form.username.value }}">
+          <input type="text" name="username" class="form-control rounded-3" id="login_username" 
+            placeholder="Enter your username"   value="{{ request.POST.username|default_if_none:'' }}">
           <div class="text-danger error-msg" id="login_username_error" style="display: none;">Username is required</div>
           {% if form.username.errors %}
             <div class="text-danger small">{{ form.username.errors.0 }}</div>
@@ -43,7 +44,12 @@
         <!-- Password -->
         <div class="mb-3">
           <label class="form-label">Password</label>
-          <input type="password" name="password" class="form-control rounded-3" id="login_password">
+          <input type="password" name="password" class="form-control rounded-3" id="login_password" 
+          placeholder="Enter your password">
+              <span class="input-group-text bg-white border-start-0 rounded-end-3" onclick="togglePasswordVisibility()" style="cursor: pointer;">
+      <i class="bi bi-eye" id="toggleEyeIcon"></i>
+    </span>
+
           <div class="text-danger error-msg" id="login_password_error" style="display: none;">Password is required</div>
           {% if form.password.errors %}
             <div class="text-danger small">{{ form.password.errors.0 }}</div>
