work on admin,user and service provider

--- a/templates/admin/create_category.html
+++ b/templates/admin/create_category.html
@@ -21,9 +21,9 @@
           </div>
 
           <!-- Description -->
-          <div class="form-floating mb-4">
-            <textarea class="form-control" placeholder="Description" id="description" name="description" style="height: 120px">{{ category.description|default:'' }}</textarea>
-            <label for="description">Description</label>
+            <div class="form-floating mb-4">
+            <textarea class="form-control" placeholder="Enter a brief description (optional)" id="description" name="description" style="height: 120px">{{ category.description|default:'' }}</textarea>
+            <label for="description">Description <span class="text-muted">(optional)</span></label>
           </div>
 
           <!-- Actions -->
