--- a/templates/services/add_service.html
+++ b/templates/services/add_service.html
@@ -45,7 +45,7 @@
           <!-- Description -->
           <div class="form-floating mb-4">
             <textarea class="form-control" placeholder="Description" id="description" name="description" style="height: 120px">{{ service.description|default:'' }}</textarea>
-            <label for="description">Description</label>
+            <label for="description">Description <span class="text-muted">(optional)</span></label>
           </div>
 
           <!-- Submit Buttons -->
