--- a/templates/services/home.html
+++ b/templates/services/home.html
@@ -19,7 +19,7 @@
           </div>
           <h5 class="card-title">Manage Services</h5>
           <p class="card-text text-muted">Add, update, or remove your services easily.</p>
-          <a href="#" class="btn btn-outline-success w-100">Go to Services</a>
+          <a href="{% url 'provider_services' %}" class="btn btn-outline-success w-100">Go to Services</a>
         </div>
       </div>
     </div>
@@ -47,7 +47,7 @@
           </div>
           <h5 class="card-title">Profile Settings</h5>
           <p class="card-text text-muted">Edit your contact details, password and preferences.</p>
-          <a href="#" class="btn btn-outline-warning w-100">Edit Profile</a>
+          <a href="{% url 'edit_profile' %}" class="btn btn-outline-warning w-100">Edit Profile</a>
         </div>
       </div>
     </div>
