--- a/templates/users/home.html
+++ b/templates/users/home.html
@@ -49,7 +49,7 @@
           </div>
           <h5 class="card-title">Profile</h5>
           <p class="card-text text-muted small">Edit your account and personal information.</p>
-          <a href="#" class="btn btn-outline-warning btn-sm w-100">Update Profile</a>
+          <a href="{% url 'edit_profile' %}" class="btn btn-outline-warning btn-sm w-100">Update Profile</a>
         </div>
       </div>
     </div>
