--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
   <style>
@@ -86,7 +87,7 @@
         {% else %}
           {% url 'login' %}
         {% endif %}">
-        <img src="{% static 'images/logo.png' %}" alt="Logo" class="main-icon rounded-circle">
+        <img src="{% static 'images/smart_service_logo.png' %}" alt="Logo" class="main-icon rounded-circle">
         Smart Service
       </a>
 
@@ -159,7 +160,7 @@
         <!-- 🔹 Brand Info -->
         <div class="col-md-4 mb-4">
           <div class="d-flex align-items-center mb-2">
-            <img src="{% static 'images/logo.png' %}" alt="Logo" width="40"
+            <img src="{% static 'images/smart_service_logo.png' %}" alt="Logo" width="40"
               class="me-2 rounded-circle border border-light">
             <h5 class="mb-0 fw-bold">Smart Service</h5>
           </div>
