--- a/templates/base.html
+++ b/templates/base.html
@@ -87,7 +87,7 @@
         {% else %}
           {% url 'login' %}
         {% endif %}">
-        <img src="{% static 'images/smart_service_logo.png' %}" alt="Logo" class="main-icon rounded-circle">
+        <img src="{% static 'images/logo.png' %}" alt="Logo" class="main-icon rounded-circle">
         Smart Service
       </a>
 
@@ -160,7 +160,7 @@
         <!-- 🔹 Brand Info -->
         <div class="col-md-4 mb-4">
           <div class="d-flex align-items-center mb-2">
-            <img src="{% static 'images/smart_service_logo.png' %}" alt="Logo" width="40"
+            <img src="{% static 'images/logo.png' %}" alt="Logo" width="40"
               class="me-2 rounded-circle border border-light">
             <h5 class="mb-0 fw-bold">Smart Service</h5>
           </div>
