add booking and reviews done

--- a/templates/accounts/edit_profile.html
+++ b/templates/accounts/edit_profile.html
@@ -98,6 +98,7 @@
       </div>
 
       <button type="submit" class="btn btn-success w-100 mt-2">💾 Update Profile</button>
+      <button onclick="history.back()" class="btn btn-secondary w-100 mt-2">← Back</button>
     </form>
   </div>
 </div>
