--- a/templates/admin/home.html
+++ b/templates/admin/home.html
@@ -47,7 +47,7 @@
           </div>
           <h5 class="card-title">Bookings</h5>
           <p class="card-text text-muted small">Track service bookings and history.</p>
-          <a href="#" class="btn btn-outline-warning btn-sm w-100">View Bookings</a>
+          <a href="{% url 'admin_all_bookings' %}" class="btn btn-outline-warning w-100">View Bookings</a>
         </div>
       </div>
     </div>
