--- a/templates/services/home.html
+++ b/templates/services/home.html
@@ -33,7 +33,7 @@
           </div>
           <h5 class="card-title">View Bookings</h5>
           <p class="card-text text-muted">Check all your upcoming and past service bookings.</p>
-          <a href="#" class="btn btn-outline-primary w-100">View Bookings</a>
+          <a href="{% url 'provider_bookings' %}" class="btn btn-outline-primary w-100">View Bookings</a>
         </div>
       </div>
     </div>
