--- a/templates/bookings/provider_bookings.html
+++ b/templates/bookings/provider_bookings.html
@@ -49,7 +49,7 @@
           </p>
 
           <p class="mb-1 small">
-            <strong>Date:</strong> {{ booking.date }}
+            <strong>Date:</strong>{{ booking.date|date:"d M Y" }}
           </p>
 
           <p class="mb-1 small">
