--- a/templates/bookings/user_bookings.html
+++ b/templates/bookings/user_bookings.html
@@ -58,7 +58,7 @@
 
           <!-- Date & Time -->
           <p class="mb-1 small">
-            <strong>Date:</strong> {{ booking.date }}
+            <strong>Date:</strong> {{  booking.date|date:"d M Y" }}
           </p>
 
           <p class="mb-2 small">
